--- a/web/src/main/webapp/src/css/business-casual.css
+++ b/web/src/main/webapp/src/css/business-casual.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: url('../img/bg.jpg') no-repeat center center fixed;
+    background: url('../img/cayman_sunset.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -119,9 +119,9 @@ footer p {
         padding: 30px 0 10px;
         text-align: center;
         text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-        font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
         font-size: 5em;
-        font-weight: 700;
+        font-weight: 450;
         line-height: normal;
         color: #fff;
     }
@@ -189,4 +189,8 @@ footer p {
         display: table;
         clear: both;
     }
+}
+
+.carousel-inner > .item > img{
+    margin: 0 auto;
 }
