--- a/web/src/main/webapp/src/css/business-casual.css
+++ b/web/src/main/webapp/src/css/business-casual.css
@@ -119,7 +119,7 @@ footer p {
         padding: 30px 0 10px;
         text-align: center;
         text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-family: "Josefin Slab", "Helvetica Neue",Helvetica,Arial,sans-serif;
         font-size: 5em;
         font-weight: 450;
         line-height: normal;
