--- a/web/src/main/webapp/src/css/business-casual.css
+++ b/web/src/main/webapp/src/css/business-casual.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: url('../img/cayman_sunset.jpg') no-repeat center center fixed;
+    background: url('../img/sky_plane.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -26,8 +26,8 @@ h6 {
 }
 
 p {
-    font-size: 1.25em;
-    line-height: 1.6;
+    font-size: 1.20em;
+    line-height: 1.4;
     color: #000;
 }
 
