--- a/web/src/main/webapp/src/css/business-casual.css
+++ b/web/src/main/webapp/src/css/business-casual.css
@@ -6,12 +6,14 @@
 
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: url('../img/sky_plane.jpg') no-repeat center center fixed;
+    background: url('../img/space.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    opacity: 0.9;
 }
+
 
 h1,
 h2,
@@ -34,6 +36,10 @@ p {
 hr {
     max-width: 400px;
     border-color: #999999;
+}
+
+.resume-bullets {
+    line-height: 1.5;
 }
 
 .brand,
